* …

=== External library changes in 1.38 ===
* …

==== New external libraries ====
* Added vue-composition-api 1.2.2

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* Updated OOUI from v0.42.0 to v0.42.1
* Updated WVUI from v0.3.0 to v0.3.2
* Updated wikimedia/parsoid from v0.14.0-a14 to v0.15.0-a1.
* Updated wikimedia/purtle from 1.0.7 to 1.0.8.
* Updated wikimedia/shellbox from 2.0.0 to 2.1.0.
* Updated pear/mail_mime from 1.10.9 to 1.10.11.
* Updated pear/net_smtp from 1.9.2 to 1.10.0.
* Updated psr/log from 1.1.3 to 1.1.4.
* Updated wikimedia/wrappedstring from 3.2.0 to 4.0.1.
* …

===== Changed development-only external libraries =====
* Updated doctrine/dbal for PHP < 7.3 from 2.10.4 to 2.13.3.
* Updated doctrine/dbal for PHP >= 7.3 from 3.0.0 to 3.1.2.
* Updated composer/spdx-licenses from 1.5.4 to 1.5.5.
* Updated composer/semver from 3.5.4 to 3.5.5.
* …

==== Removed external libraries ====
* …

=== Bug fixes in 1.38 ===
* …

=== Action API changes in 1.38 ===
* …

=== Action API internal changes in 1.38 ===
* …

=== Languages updated in 1.38 ===
MediaWiki supports over 400 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* (T292166) Updated namespace names for the Lombard language.
* (T291899) Added language support for Xiang Chinese (hsn).
* (T292612) Added language support for S'gaw Karen (ksw).
* (T293656) Added language support for Farefare (gur).

=== Breaking changes in 1.38 ===
* (T291008) The IP class, deprecated since 1.35 in favor of the IPUtils library,
  has been removed. The IP related regexes which were also deprecated in favor
  of the IPUtils library were also removed, IPUtils::RE_* should be used
  instead.
* LinkCache::singleton(), deprecated since 1.28, has been removed.
* RepoGroup::singleton(), ::destroySingletons() and setSingleton(), all