@@ -68,7 +68,7 @@
 		"wikimedia/running-stat": "1.2.1",
 		"wikimedia/scoped-callback": "3.0.0",
 		"wikimedia/services": "2.0.1",
-		"wikimedia/shellbox": "2.1.0",
+		"wikimedia/shellbox": "3.0.0",
 		"wikimedia/utfnormal": "3.0.2",
 		"wikimedia/timestamp": "3.0.0",
 		"wikimedia/wait-condition-loop": "2.0.2",
