@@ -3,8 +3,10 @@
 namespace MediaWiki\Shell;
 
 use GuzzleHttp\Psr7\Uri;
+use GuzzleHttp\RequestOptions;
 use MediaWiki\Http\HttpRequestFactory;
 use Shellbox\Client;
+use WebRequest;
 
 /**
  * This is a service which provides a configured client to access a remote
@@ -64,8 +66,13 @@ class ShellboxClientFactory {
 		}
 
 		return new Client(
-			new ShellboxHttpClient( $this->requestFactory,
-				$options['timeout'] ?? self::DEFAULT_TIMEOUT ),
+			$this->requestFactory->createGuzzleClient( [
+				RequestOptions::TIMEOUT => $options['timeout'] ?? self::DEFAULT_TIMEOUT,
+				RequestOptions::HEADERS => [
+					'X-Request-Id' => WebRequest::getRequestId(),
+				],
+				RequestOptions::HTTP_ERRORS => false,
+			] ),
 			new Uri( $url ),
 			$this->key
 		);
