@@ -67,7 +67,7 @@ For notes on 1.36.x and older releases, see HISTORY.
 * Updated WVUI from v0.3.0 to v0.3.2
 * Updated wikimedia/parsoid from v0.14.0-a14 to v0.15.0-a1.
 * Updated wikimedia/purtle from 1.0.7 to 1.0.8.
-* Updated wikimedia/shellbox from 2.0.0 to 2.1.0.
+* Updated wikimedia/shellbox from 2.0.0 to 3.0.0.
 * Updated pear/mail_mime from 1.10.9 to 1.10.11.
 * Updated pear/net_smtp from 1.9.2 to 1.10.0.
 * Updated psr/log from 1.1.3 to 1.1.4.
@@ -200,6 +200,8 @@ because of Phabricator reports.
   usages.
 * File::getUser, ::getImageSize, ArchivedFile::getRawDescription, ::getUser,
   ::getRawUser and ::getRawDescription, deprecated since 1.37, has been removed.
+* ShellboxHttpClient class has been removed without deprecation. It was an
+  internal class used by ShellboxClientFactory.
 * …
 
 === Deprecations in 1.38 ===
